bu-analytics-gen-ai-midas/deploy/k8s/aws-load-balancer-controller/sample-ingressclass.yaml
# IngressClass for AWS Load Balancer Controller (ALB).
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  controller: ingress.k8s.aws/alb
